# MangoLib

./: README.md
MangoLib/: CMakeLists.txt  LICENSE.md  Readme.md
MangoLib/Src/: mango.h
MangoLib/Src/Aktywacja/: Aktywacje.cpp  aktywacje.h
MangoLib/Src/DeepLearningMango/: DeepMango.cpp  DeepMango.h
MangoLib/Src/MangoStandard/: standard.cpp  standard.h
MangoLib/Src/Train/: TrainMetods.h
